# gw-installer1

./: package-lock.json  package.json  structure.txt  tsconfig.json
.github/workflows/: build-release.yml  build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  installer.rs  lib.rs  main.rs  n8n_manager.rs  ollama_server.rs  system_check.rs
src-tauri/src/installer/: cleanup.rs  environment.rs  install_n8n_real.rs  mod.rs  n8n.rs  nodejs.rs  ollama.rs  ollama_real.rs  progress.rs  runner.rs  smart.rs
src-tauri/src/ports/: manager.rs  mod.rs
src-tauri/src/system/: detector.rs
src/components/: Button.tsx  InstallationWizard.tsx  Layout.tsx  LogViewer.tsx  ProgressBar.tsx  SmartInstaller.tsx  SuccessScreen.tsx  SystemCheck.tsx  Typography.tsx  WelcomeScreen.tsx
src/styles/: brand.css
